fix[student]: fix path in updateStudent docs & change struct about student from service to model folder
